<resources>
    <string name="app_name">HiMeet</string>
    <!-- 登陆 -->
    <string name="login_register"><u>注册 Hi Meet 账号</u></string>
    <string name="login_forget_password"><u>忘记密码</u></string>
    <string name="register_username_hint">请输入你的邮箱或者手机号</string>
    <string name="register_username_notice">一经填写不可修改</string>
    <string name="register_password_hint">请设置你的登录密码</string>
    <string name="register_password_notice"><![CDATA[请至少输入6个数字、字母和符号（如！和&）组合的密码。]]></string>
    <string name="login_has_account">已有账号了吗？</string>

    <!-- 注册 -->
    <string name="register">注册</string>
    <string name="your_country">你的国家</string>
    <string name="your_identity">你的身份</string>
    <string name="find_password">找回密码</string>
    <string name="male">男</string>
    <string name="female">女</string>

    <string name="register_text_1">注册即表明你同意我们的</string>
    <string name="register_text_2">且已通读</string>
    <string name="register_text_3">包括</string>
    <string name="register_text_4">你可能会收到来自Hi Meet 的短信通知，</string>
    <string name="register_text_5">并可随时退订。</string>
    <string name="register_invitation_text_1"><u>Hi Meet 条款</u>，</string>
    <string name="register_invitation_text_2"><u>隐私政策</u>，</string>
    <string name="register_invitation_text_3"><u>Cookie 使用政策</u>。</string>

    <string name="register_input_invitation">输入邀请码</string>
    <string name="register_next">下一步</string>
    <string name="register_start">马上开始</string>
    <string name="register_has_account">已有账户了吗？</string>

    <string name="notice_name_blank">用户名不能为空</string>
    <string name="notice_name_format">用户名错误</string>

    <string name="notice_password_blank">密码不能为空</string>

    <string name="notice_password_length">密码长度需为6~20位</string>
    <string name="notice_password_rule">密码必须包括数字和字母</string>
    <string name="notice_password_confirm_error">两次输入的密码不同</string>

    <string name="notice_validate_code_blank">请输入验证码</string>
    <string name="notice_validate_code_error">验证码不正确</string>

    <string name="no_more">已无更多</string>
    <string name="login_username_hint">请输入你的邮箱或手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="register_notice_nickname">使用名字可以让朋友更轻松找到你</string>
    <string name="register_hint_nickname">请输入你的名字，限20个字符</string>
    <string name="register_notice_birthday">你稍后可以在设置中更改</string>
    <string name="register_notice_safe">填写安全问题可以帮助您找回密码</string>
    <string name="logout">退出登录</string>
    <string name="cancel">取消</string>
    <string name="edit_user_data">编辑资料</string>
    <string name="complete">完成</string>
    <string name="set_password">设置密码</string>
    <string name="setting">账户设置</string>
    <string name="commit">提交</string>
    <string name="invitation">邀请码</string>
    <string name="share">分享</string>
    <string name="consider_me">关注我的</string>
    <string name="me_consider">我关注的</string>
    <string name="from_the_album_to_choose">从相册选择</string>
    <string name="take_photos">拍照</string>

    <!--详情-->
    <string name="home_detail_title">状态照片</string>
    <string name="home_detail_praise">345,678,900赞</string>
    <string name="home_detail_send_hint">发表</string>
    <string name="home_detail_edit_hint">添加评论...</string>


    <string name="pwd_not_null">密码不能为空！</string>
    <string name="pwd_confrim_error">两次密码输入不同！</string>
    <string name="success">成功！</string>
    <string name="edit">编辑</string>


    <!--主页-->
    <string name="message">动态</string>


    <!--拍照-->
    <string name="photo_take">拍照</string>


    <!--分享至-->
    <string name="share_state">分享状态</string>
    <string name="share_to">分享至</string>

    <string name="network_check_error">网络不给力\n点击屏幕重试</string>

    <!--搜索-->
    <string name="search">搜索</string>


    <!-- 加载更多-->
    <string name="loading_more">加载更多...</string>
    <string name="content_empty">内容为空</string>
    <string name="get_more_when_lose">加载失败...</string>
    <string name="not_more">没有更多数据</string>
    <string name="login">登录</string>

    <!-- 个人页面 -->
    <string name="user_state">个人动态</string>
    <string name="user_engage">参与活动</string>
    <string name="user_all_states">全部动态</string>
    <string name="user_my_follow">关注</string>
    <string name="user_my_followers">粉丝</string>
    <string name="user_not_follow">关注</string>
    <string name="user_is_followed">已关注</string>
    <string name="title_popular_activities">精彩活动</string>
    <string name="search_more">搜索更多内容</string>
    <string name="search_state">动态</string>
    <string name="search_user">用户</string>
    <string name="search_activity">活动</string>
    <string name="search_hint">搜索</string>
    <string name="search_cancel">取消</string>
    <string name="search_see_more">查看更多</string>
    <string name="user_birthday">生日：</string>
    <string name="user_sexual">性别：</string>
    <string name="user_phone_number">手机号码：</string>
    <string name="edit_head">点击修改</string>
    <string name="user_nickname">昵称:</string>
    <string name="user_security_question">安全问题:</string>
    <string name="user_question_answer_hint">请输入你的回答</string>
    <string name="share_weixin">微信</string>
    <string name="share_weibo">新浪微博</string>
    <string name="click_add_topic">＃点击添加话题</string>
    <string name="share_call_user">圈人</string>
    <string name="share_photo_hint">请输入</string>
    <string name="find_friend">查找好友</string>
    <string name="find_friend_facebook">查找facebook好友</string>
    <string name="find_friend_weixin">查找微信好友</string>
    <string name="find_friend_contact">查找联系人好友</string>
    <string name="invite_friend">邀请好友</string>
    <string name="setting_account">账户</string>
    <string name="setting_edit_details">编辑资料</string>
    <string name="setting_change_password">更改密码</string>
    <string name="setting_clear_cache">清理缓存</string>
    <string name="setting_logout">退出登录</string>

    <string name="talk_list">话题列表</string>
    <string name="register_verifying">正在验证...</string>
    <string name="register_invitation_code_error">邀请码无效</string>

    <string name="find_password_notice_1">输入你注册是填写的昵称</string>
    <string name="find_password_notice_2">输入您注册时填写的问题和答案</string>
    <string name="home_recommend">精彩推荐</string>
</resources>
