<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_above="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:gravity="center_horizontal"
                android:src="@drawable/ic_register_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_marginBottom="68dp"
                android:background="@drawable/bg_login_input"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="9dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginRight="4dp"
                        android:text="@string/register_text_1"
                        style="@style/Hi.Text.Normal.Dark"/>
                    <TextView
                        android:id="@+id/text_clause"
                        android:text="@string/register_invitation_text_1"
                        style="@style/Hi.Text.Normal.App" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="9dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginRight="4dp"
                        android:text="@string/register_text_2"
                        style="@style/Hi.Text.Normal.Dark"/>
                    <TextView
                        android:id="@+id/text_privacy"
                        android:text="@string/register_invitation_text_2"
                        style="@style/Hi.Text.Normal.App"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="9dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginRight="4dp"
                        android:text=""
                        style="@style/Hi.Text.Normal.Dark" />
                    <TextView
                        android:id="@+id/text_cookie"
                        android:text="@string/register_invitation_text_3"
                        style="@style/Hi.Text.Normal.App" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="9dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/register_text_4"
                        style="@style/Hi.Text.Normal.Dark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="9dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/register_text_5"
                        style="@style/Hi.Text.Normal.Dark" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>


            </LinearLayout>
            <RelativeLayout
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                style="@style/Hi.Input.Container"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal"
                android:paddingLeft="13dp"
                android:layout_height="45dp">
                <EditText
                    android:id="@+id/edit_invitation"
                    android:gravity="center"
                    android:background="@color/transparent"
                    android:layout_width="match_parent"
                    android:includeFontPadding="false"
                    android:maxLength="4"
                    android:textSize="@dimen/font_normal"
                    android:singleLine="true"
                    android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
                    android:layout_centerInParent="true"
                    android:hint="@string/register_input_invitation"
                    android:nextFocusDown="@+id/btn_start"
                    android:textColorHint="@color/text_hint_grey"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="match_parent" />
                <ImageButton
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/btn_code_clear"
                    android:paddingRight="13dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_input_clear_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </RelativeLayout>
            <Button
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/btn_start"
                android:enabled="false"
                android:text="@string/register_start"
                android:textSize="@dimen/font_normal"
                android:textColor="@color/white"
                android:background="@drawable/selector_btn_purple"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/layout_has_account"
        android:layout_height="50dp">
            <TextView
                android:padding="10dp"
                android:text="@string/register_has_account"
                style="@style/Hi.Text.Small.Dark" />
    </LinearLayout>
</LinearLayout>