<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">


    <include layout="@layout/toolbar_white_common_back"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/find_friend"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/rl_facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/find_friend_facebook"
            android:textColor="#1e1e1e"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_setting_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c8c8c8" />

    <RelativeLayout
        android:id="@+id/rl_weixin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/find_friend_weixin"
            android:textColor="#1e1e1e"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_setting_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c8c8c8" />

    <RelativeLayout
        android:id="@+id/rl_contacts"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/find_friend_contact"
            android:textColor="#1e1e1e"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_setting_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/transparent" />

    <RelativeLayout
        android:id="@+id/rl_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/invite_friend"
            android:textColor="#1e1e1e"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_setting_right" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/setting_account"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/rl_data_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_edit_details"
            android:textColor="#1e1e1e"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_setting_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c8c8c8" />

    <RelativeLayout
        android:id="@+id/rl_pwd_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_change_password"
            android:textColor="#1e1e1e"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_setting_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/transparent" />

    <RelativeLayout
        android:id="@+id/rl_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_clear_cache"
            android:textColor="#1e1e1e"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_setting_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/transparent" />


    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/setting_logout"
        android:textColor="#1e1e1e"
        android:textSize="18sp" />

</LinearLayout>