<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_white_common_back" />

    <LinearLayout

        android:paddingTop="30dp"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            style="@style/Hi.Input.Container"
            android:orientation="horizontal"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
          >

            <TextView
                android:text="@string/user_nickname"
                style="@style/Hi.Text.Normal.Dark"/>
            <EditText
                android:id="@+id/edit_nickname"
                android:gravity="center_vertical"
                android:background="@color/transparent"
                android:layout_width="0dp"
                android:imeOptions="actionNext"
                android:textSize="@dimen/font_normal"
                android:layout_weight="1"
                android:singleLine="true"
                android:nextFocusDown="@+id/edit_password"
                android:maxLength="14"
                android:focusable="true"
                android:hint="@string/register_hint_nickname"
                android:textColorHint="@color/text_grey"
                android:layout_height="match_parent" />
            <ImageButton
                android:id="@+id/btn_nickname_clear"
                android:paddingRight="13dp"
                android:visibility="gone"
                android:background="@color/transparent"
                android:src="@drawable/ic_input_clear_grey"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/img_username_loading"
                android:paddingRight="13dp"
                android:visibility="gone"
                android:background="@color/transparent"
                android:src="@drawable/anim_input_loading"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="@dimen/font_small"
            android:layout_marginBottom="10dp"
            android:text="@string/find_password_notice_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            style="@style/Hi.Input.Container"
            android:orientation="horizontal"
            android:paddingLeft="13dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:text="@string/user_security_question"
                style="@style/Hi.Text.Normal.Dark"/>
            <EditText
                android:id="@+id/edit_safe_question"
                android:gravity="center_vertical"
                android:background="@color/transparent"
                android:layout_width="0dp"
                android:textSize="@dimen/font_normal"
                android:maxLines="1"
                android:maxLength="14"
                android:nextFocusDown="@+id/btn_login"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:textColorHint="@color/text_grey"
                android:layout_height="match_parent"
                android:hint="">
                </EditText>
        </LinearLayout>
        <LinearLayout
            style="@style/Hi.Input.Container"
            android:orientation="horizontal"
            android:paddingLeft="13dp"
            >
            <EditText
                android:id="@+id/edit_safe_answer"
                android:gravity="center_vertical"
                android:background="@color/transparent"
                android:layout_width="0dp"
                android:textSize="@dimen/font_normal"
                android:maxLines="1"
                android:maxLength="14"
                android:nextFocusDown="@+id/btn_login"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:hint="@string/user_question_answer_hint"
                android:textColorHint="@color/text_grey"
                android:layout_height="match_parent" >
            </EditText>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="@dimen/font_small"
            android:layout_marginBottom="10dp"
            android:text="@string/find_password_notice_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
               android:layout_centerInParent="true"
                android:id="@+id/btn_next"
                android:text="@string/register_next"
                android:enabled="false"
                android:textSize="@dimen/font_normal"
                android:textColor="@color/white"
                android:background="@drawable/selector_btn_purple"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/layout_has_account"
        android:layout_height="50dp">
        <TextView
            android:text="@string/register_has_account"
            style="@style/Hi.Text.Small.Dark" />
    </LinearLayout>

</LinearLayout>