<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#f5f5f5"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include
        android:id="@+id/layout_search"
        layout="@layout/layout_search_main" />

    <LinearLayout
        android:id="@+id/layout_normal"
        android:visibility="visible"
        android:layout_marginTop="100dp"
        android:layout_width="200dp"
        android:layout_below="@+id/layout_search"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/search_more"
            style="@style/Hi.Text.Big.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <View
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:background="#C8C8C8"
            android:layout_width="match_parent"
            android:layout_height="1px" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"

            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                style="@style/Hi.Text.Small.Grey"
                android:drawableTop="@drawable/ic_search_talk"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/search_state"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="5dp"
                style="@style/Hi.Text.Small.Grey"
                android:drawableTop="@drawable/ic_search_user"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/search_user"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="5dp"
                style="@style/Hi.Text.Small.Grey"
                android:drawableTop="@drawable/ic_search_activity"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:text="@string/search_activity"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:layout_below="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layout_result"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

</RelativeLayout>